PR10622 Search for extern $variables in symbol table.

* dwflpp.h (vardie_from_symtable): New method.
* dwflpp.cxx (vardie_from_symtable): New method.
  (literal_stmt_for_local): Use vardie_from_symtable when no location
  attribute and DW_AT_external.
* testsuite/buildok/xtime.stp: New testcase from PR10622.